--- a/View/PadawanWindow.xaml
+++ b/View/PadawanWindow.xaml
@@ -1,34 +1,25 @@
 ﻿<kwc:AutoHideWindow x:Class="KeyPadawan.View.PadawanWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:kwc="clr-namespace:KeyPadawan.Windows.Controls">
+    xmlns:kwc="clr-namespace:KeyPadawan.Windows.Controls" Left="0" Loaded="Window_Loaded">
     <kwc:AutoHideWindow.Resources>
         <Style x:Key="{x:Type TextBlock}" TargetType="{x:Type TextBlock}">
-        <Setter Property="TextWrapping"   
-                Value="Wrap" />
-        <Setter Property="FontFamily"   
+            <Setter Property="FontFamily"   
                 Value="Arial" />
-        <Setter Property="FontWeight"   
+            <Setter Property="FontWeight"   
                 Value="Bold" />
-        <Setter Property="FontStretch"   
+            <Setter Property="FontStretch"   
                 Value="Expanded" />
-        <Setter Property="FontSize"   
-                Value="24" />
-        <!--<Style.Triggers>
-                <EventTrigger RoutedEvent="TextChanged">
-                <EventTrigger.Actions>
-                    <StopStoryboard BeginStoryboardName="FadeInEffect" />
-                        <StopStoryboard BeginStoryboardName="FadeOutEffect" />
-                        <BeginStoryboard Name="FadeInEffect">
-                            <Storyboard>
-                                <DoubleAnimation Storyboard.TargetProperty="Opacity" To="1.0" Duration="0:0:0.10" />
-                            </Storyboard>
-                        </BeginStoryboard>
-                    </EventTrigger.Actions>
-            </EventTrigger>
-        </Style.Triggers>-->
-    </Style>
-        </kwc:AutoHideWindow.Resources>
+            <Setter Property="FontSize"   
+                Value="50" />
+            <Setter Property="Foreground"   
+                Value="White" />
+            <Setter Property="TextAlignment"
+                    Value="Center" />
+            <Setter Property="VerticalAlignment"
+                    Value="Center" />
+        </Style>
+    </kwc:AutoHideWindow.Resources>
     <Grid>
         <TextBlock Name="textBlock" Text="{Binding Path=Buffer}">
         </TextBlock>
