--- a/View/PadawanWindow.xaml
+++ b/View/PadawanWindow.xaml
@@ -2,7 +2,12 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:kwc="clr-namespace:KeyPadawan.Windows.Controls" 
-    xmlns:kv="clr-namespace:KeyPadawan.View" Left="0" Loaded="Window_Loaded">
+    xmlns:properties="clr-namespace:KeyPadawan.Properties"                 
+    xmlns:kv="clr-namespace:KeyPadawan.View" 
+    Height="{Binding Source={x:Static properties:Settings.Default}, Path=WindowHeight, Mode=TwoWay}" 
+    Width="{Binding Source={x:Static properties:Settings.Default}, Path=WindowWidth, Mode=TwoWay}" 
+    Left="{Binding Source={x:Static properties:Settings.Default}, Path=WindowLeft, Mode=TwoWay}" 
+    Top="{Binding Source={x:Static properties:Settings.Default}, Path=WindowTop, Mode=TwoWay}">
     <kwc:AutoHideWindow.Resources>
         <Style x:Key="{x:Type TextBlock}" TargetType="{x:Type TextBlock}">
             <Setter Property="FontFamily"   
